адаптивная высота разделителя

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta
-      name="keywords"
-      content=/>
+    <meta name="description" content= /> <meta name="keywords" content=/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Оренда кавомашин для бізнесу безкоштовно | Bianchi Professional</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
@@ -347,7 +342,7 @@
     <section class="indexicons">
       <div class="container indexcards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="./img/index/icon1.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -358,7 +353,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="./img/index/icon2.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -370,7 +365,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="./img/index/icon3.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -382,7 +377,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="./img/index/icon4.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -394,7 +389,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="./img/index/icon5.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -405,7 +400,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -447,7 +442,9 @@
           </div>
           <div class="slider">
             <div class="slider__item">
-              <img data-lazy="./img/index/slider/necta_korinto_prime.webp" alt="necta_korinto" />
+              <img
+                data-lazy="./img/index/slider/necta_korinto_prime.webp"
+                alt="necta_korinto" />
             </div>
             <div class="slider__item">
               <img
@@ -474,7 +471,7 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Timeline    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Що потрібно для співпраці</h3>
     </div>
     <div class="container timeline">
@@ -646,7 +643,7 @@
     </section>
 
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>НАШІ ПАРТНЕРИ</h3>
     </div>
     <div class="container text-center partners mb-4">
@@ -723,32 +720,69 @@
         <div class="row">
           <div class="col justify-content-md-center">
             <div class="text-wrap text-left">
-              <h3>Сервісна Компанія Bianchi Professional - Ваш кавовий бізнес «під ключ»</h3>
-              <p>Ми пропонуємо оренду кавомашин для бізнесу будь-якого масштабу. Наші кавомашини - це чудове рішення для офісів, магазинів, торгівельних мереж, АЗС та 
-                інших організацій, які прагнуть забезпечити своїх клієнтів та співробітників якісною кавою.</p>
-                <h3>Чому варто обрати оренду кавомашин від BianchiProf?</h3>
-                <ul>
-                  <li><strong>Широкий вибір кавового обладнання:</strong> у нашому асортименті ви знайдете моделі для будь-яких потреб - від компактних 
-                    офісних кавомашин до вендінгових автоматів з гарячими напоями та снеками.</li>
-                    <li><strong>Гнучкі умови співпраці:</strong> оренда кавомашин безкоштовно, під плани продажу кави, який залежить від обраного кавового апарату та специфіки вашого бізнесу.</li>
-                    <li><strong>Повне технічне обслуговування:</strong> наші фахівці забезпечать регулярне технічне обслуговування та швидке усунення будь-яких несправностей, щоб ви могли 
-                      насолоджуватися безперебійною роботою кавомашини.</li>
-                     <li><strong>Повне забезпечення кавою та супутніми товарами:</strong> кава у зернах найвищого гатунку тільки від перевірених європейських виробників. Широкий асортимент 
-                        гарячих напоїв: капучино, шоколад, молоко, чай. А також обов’язкові супутні товари: сиропи до кави, брендові кавові та чайні стакани, цукор у стіках, мішалки.</li>
-                        <li><strong>Реклама та маркетинг:</strong> для маркетингових потреб ми забезпечимо вас друкованими матеріалами, штендерами, брендованими
-                           тумбами та іншою рекламною продукцією.</li>
-                </ul>
-                <p>Наші представництва вже працюють у багатьох регіонах України, тому оренда кавових машин доступна у таких містах, як Київ, Харків, Біла Церква, Умань, Бориспіль, 
-                  Бровари, Тернопіль, Вінниця, Хмельницький, Рівне, Чернівці та Чернігів. А завдяки вендінгу, ми присутні практично у всіх регіонах України. Незалежно від вашого місця 
-                  розташування, ви можете розраховувати на якісне обслуговування та підтримку від компанії Bianchi Professional.</p>
-                  <h3>Як це працює?</h3>
-                  <ol>
-                    <li>Залиште заявку на сайті або зателефонуйте за вказаними номерами.</li>
-    <li>Наші менеджери допоможуть вам обрати потрібну модель залежно від ваших потреб, бюджету та специфіки бізнесу.</li>
-    <li>Ми доставимо та встановимо кавовий апарат у зручний для вас час.</li>
-    <li>Ви отримаєте повне сервісне обслуговування та підтримку на весь період оренди.</li>
-                  </ol>
-
+              <h3>
+                Сервісна Компанія Bianchi Professional - Ваш кавовий бізнес «під ключ»
+              </h3>
+              <p>
+                Ми пропонуємо оренду кавомашин для бізнесу будь-якого масштабу. Наші
+                кавомашини - це чудове рішення для офісів, магазинів, торгівельних мереж,
+                АЗС та інших організацій, які прагнуть забезпечити своїх клієнтів та
+                співробітників якісною кавою.
+              </p>
+              <h3>Чому варто обрати оренду кавомашин від BianchiProf?</h3>
+              <ul>
+                <li>
+                  <strong>Широкий вибір кавового обладнання:</strong>
+                  у нашому асортименті ви знайдете моделі для будь-яких потреб - від
+                  компактних офісних кавомашин до вендінгових автоматів з гарячими напоями
+                  та снеками.
+                </li>
+                <li>
+                  <strong>Гнучкі умови співпраці:</strong>
+                  оренда кавомашин безкоштовно, під плани продажу кави, який залежить від
+                  обраного кавового апарату та специфіки вашого бізнесу.
+                </li>
+                <li>
+                  <strong>Повне технічне обслуговування:</strong>
+                  наші фахівці забезпечать регулярне технічне обслуговування та швидке
+                  усунення будь-яких несправностей, щоб ви могли насолоджуватися
+                  безперебійною роботою кавомашини.
+                </li>
+                <li>
+                  <strong>Повне забезпечення кавою та супутніми товарами:</strong>
+                  кава у зернах найвищого гатунку тільки від перевірених європейських
+                  виробників. Широкий асортимент гарячих напоїв: капучино, шоколад,
+                  молоко, чай. А також обов’язкові супутні товари: сиропи до кави,
+                  брендові кавові та чайні стакани, цукор у стіках, мішалки.
+                </li>
+                <li>
+                  <strong>Реклама та маркетинг:</strong>
+                  для маркетингових потреб ми забезпечимо вас друкованими матеріалами,
+                  штендерами, брендованими тумбами та іншою рекламною продукцією.
+                </li>
+              </ul>
+              <p>
+                Наші представництва вже працюють у багатьох регіонах України, тому оренда
+                кавових машин доступна у таких містах, як Київ, Харків, Біла Церква,
+                Умань, Бориспіль, Бровари, Тернопіль, Вінниця, Хмельницький, Рівне,
+                Чернівці та Чернігів. А завдяки вендінгу, ми присутні практично у всіх
+                регіонах України. Незалежно від вашого місця розташування, ви можете
+                розраховувати на якісне обслуговування та підтримку від компанії Bianchi
+                Professional.
+              </p>
+              <h3>Як це працює?</h3>
+              <ol>
+                <li>Залиште заявку на сайті або зателефонуйте за вказаними номерами.</li>
+                <li>
+                  Наші менеджери допоможуть вам обрати потрібну модель залежно від ваших
+                  потреб, бюджету та специфіки бізнесу.
+                </li>
+                <li>Ми доставимо та встановимо кавовий апарат у зручний для вас час.</li>
+                <li>
+                  Ви отримаєте повне сервісне обслуговування та підтримку на весь період
+                  оренди.
+                </li>
+              </ol>
             </div>
           </div>
         </div>
@@ -885,7 +919,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -974,7 +1008,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="js/modules/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
       $(document).ready(function () {
         $(".slider").slick({
