--- a/src/rashodniki.html
+++ b/src/rashodniki.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta name="keywords" content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Одноразові стакани для кави та чаю | Цукор у стіках | Мішалки для кави</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
@@ -304,11 +301,13 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Головна</a></li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Головна</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">Розхідні матеріали</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Розхідні матеріали</h1>
     </div>
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
@@ -357,17 +356,17 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">
-                Картонні стакани Bianchi
-              </h3>
+              <h3 class="text-center">Картонні стакани Bianchi</h3>
               <small>
-                <p class="lh-sm">Золоті стакани компанії Bianchi Professional впізнавані споживачем у багатьох містах України.</p>
                 <p class="lh-sm">
-                  Стакани виробляються з міцного якісного картону із застосуванням зовнішньої ламінації.
+                  Золоті стакани компанії Bianchi Professional впізнавані споживачем у
+                  багатьох містах України.
                 </p>
                 <p class="lh-sm">
-                  В асортименті представлені різні об'єми.
+                  Стакани виробляються з міцного якісного картону із застосуванням
+                  зовнішньої ламінації.
                 </p>
+                <p class="lh-sm">В асортименті представлені різні об'єми.</p>
               </small>
             </div>
           </div>
@@ -386,7 +385,7 @@
                       Об'єм:
                       <br />
                     </b>
-                  300 мл
+                    300 мл
                   </li>
                   <br />
                   <li>
@@ -412,14 +411,16 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">
-                Картонні стакани для чаю Bianchi
-              </h3>
+              <h3 class="text-center">Картонні стакани для чаю Bianchi</h3>
               <small>
-                <p class="lh-sm">Одноразові стаканчики для чаю Bianchi – 
-                  це поєднання стилю, зручності та екологічності. Виготовлені ​​з високоякісного картону, ці стакани ідеальні для колекції чаїв Bianchi.</p>
                 <p class="lh-sm">
-                  Стакани виготовляються із міцного якісного картону із застосуванням зовнішньої ламінації.
+                  Одноразові стаканчики для чаю Bianchi – це поєднання стилю, зручності та
+                  екологічності. Виготовлені ​​з високоякісного картону, ці стакани
+                  ідеальні для колекції чаїв Bianchi.
+                </p>
+                <p class="lh-sm">
+                  Стакани виготовляються із міцного якісного картону із застосуванням
+                  зовнішньої ламінації.
                 </p>
               </small>
             </div>
@@ -465,15 +466,16 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Цукор у стіках
-              </h3>
+              <h3 class="text-center">Цукор у стіках</h3>
               <br />
               <small>
                 <p class="lh-sm">
-                  Цукор у стіках — це зручний та гігієнічний спосіб додати солодкість до вашого напою.
+                  Цукор у стіках — це зручний та гігієнічний спосіб додати солодкість до
+                  вашого напою.
                 </p>
                 <p class="lh-sm">
-                  Індивідуально упакований, він забезпечує точне дозування, забезпечуючи вашим клієнтам та гостям максимальний комфорт.
+                  Індивідуально упакований, він забезпечує точне дозування, забезпечуючи
+                  вашим клієнтам та гостям максимальний комфорт.
                 </p>
               </small>
             </div>
@@ -498,30 +500,32 @@
                   <br />
                   <li>
                     <b>
-                      Максимальна<br />
+                      Максимальна
+                      <br />
                       температура
                       <br />
                     </b>
                     90°С
                   </li>
                   <br />
-                  
                 </ul>
               </figcaption>
             </figure>
             <div class="card-body">
               <h3 class="text-center">
-                Дерев’яні мішалки 
+                Дерев’яні мішалки
                 <br />
                 для кави
               </h3>
               <small>
                 <p class="lh-sm">
-                  Це натуральний та екологічний аксесуар, який ідеально доповнює сервіс гарячих напоїв у вашому закладі.
+                  Це натуральний та екологічний аксесуар, який ідеально доповнює сервіс
+                  гарячих напоїв у вашому закладі.
                 </p>
                 <p class="lh-sm">
-                  Виготовлені з високоякісного дерева, мішалки зручні у використанні та не впливають на смак напою. 
-                  Вони підходять як для кави, так і для чаю, та стануть чудовою альтернативою пластиковим мішалкам. 
+                  Виготовлені з високоякісного дерева, мішалки зручні у використанні та не
+                  впливають на смак напою. Вони підходять як для кави, так і для чаю, та
+                  стануть чудовою альтернативою пластиковим мішалкам.
                 </p>
               </small>
             </div>
@@ -634,7 +638,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
