--- a/src/ru/arenda.html
+++ b/src/ru/arenda.html
@@ -7,11 +7,12 @@
     <meta
       name="description"
       content="Бесплатная аренда кофемашин при покупке кофе ✔ Для магазинов, офисов, АЗС" />
-    <meta
-      name="keywords"
-      content=/>
+    <meta name="keywords" content=/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Взять кофемашину в аренду для бизнеса бесплатно | Киев, Харьков, Хмельницкий, Винница</title>
+    <title>
+      Взять кофемашину в аренду для бизнеса бесплатно | Киев, Харьков, Хмельницкий,
+      Винница
+    </title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -308,11 +309,13 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Главная</a></li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Главная</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">Аренда кофемашин</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Аренда кофемашин</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -339,7 +342,7 @@
               <div class="card-body">
                 <h5 class="fw-bold">Бесплатное оборудование</h5>
                 <p class="card-text main-text-size">
-                  Устанавливаем любую модель 
+                  Устанавливаем любую модель
                   <a href="./avtomaty.html">зерновых кофемашин</a>
                   без арендной платы, под выполнение объема реализаций кофе. Обеспечиваем
                   тумбами под аппарат и рекламными материалами.
@@ -396,19 +399,26 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 px-4">
-          <img src="../img/arenda/slide2.webp" class="p-3 img-fluid" alt="кофемашина в магазин" />
+          <img
+            src="../img/arenda/slide2.webp"
+            class="p-3 img-fluid"
+            alt="кофемашина в магазин" />
         </div>
         <div class="col-lg-6">
           <a class="blacklink fw-medium fs-5 lh-lg" href="./dlya_magazinov_i_setey.html">
             Кофемашина для магазина в аренду
           </a>
           <p class="magazine indent main-text-size">
-            Выпить вкусный кофе сейчас можно не только в кафе, но и в магазинах, как больших, так и маленьких.
-            Предлагаем вам установить кофейное оборудование в вашей торговой сети на выгодных условиях. Только представьте,
-            как аромат свежемолотого кофе встречает ваших клиентов и побуждает возвращаться за стаканчиком любимого напитка снова и снова.</p> 
-            <p>Выбор кофемашины зависит от размера заведения и его статусности, проходимости людей. Наши менеджеры подберут
-              самый выгодный вариант именно для Вас, учитывая все нюансы и пожелания.
-            </p>
+            Выпить вкусный кофе сейчас можно не только в кафе, но и в магазинах, как
+            больших, так и маленьких. Предлагаем вам установить кофейное оборудование в
+            вашей торговой сети на выгодных условиях. Только представьте, как аромат
+            свежемолотого кофе встречает ваших клиентов и побуждает возвращаться за
+            стаканчиком любимого напитка снова и снова.
+          </p>
+          <p>
+            Выбор кофемашины зависит от размера заведения и его статусности, проходимости
+            людей. Наши менеджеры подберут самый выгодный вариант именно для Вас, учитывая
+            все нюансы и пожелания.
           </p>
         </div>
       </div>
@@ -420,37 +430,54 @@
             Кофемашина для офиса в аренду
           </a>
           <p class="magazine indent main-text-size">
-            Кофемашина для офиса играет немаловажную роль в создании комфортной рабочей атмосферы.
- Она помогает поддерживать энергию и концентрацию сотрудников, способствуя их производительности в течение дня. Кроме того, кофейные паузы предоставляют
- возможность для короткого отдыха и неформального общения с коллегами, что положительно влияет на командный дух.</p>
-          <p>Аренда кофемашины для офиса
-            позволяет избежать больших начальных затрат на покупку дорогостоящего оборудования, включает полное обслуживание и ремонт, возможность легкой смены оборудования,
-            если появятся новые требования.
+            Кофемашина для офиса играет немаловажную роль в создании комфортной рабочей
+            атмосферы. Она помогает поддерживать энергию и концентрацию сотрудников,
+            способствуя их производительности в течение дня. Кроме того, кофейные паузы
+            предоставляют возможность для короткого отдыха и неформального общения с
+            коллегами, что положительно влияет на командный дух.
+          </p>
+          <p>
+            Аренда кофемашины для офиса позволяет избежать больших начальных затрат на
+            покупку дорогостоящего оборудования, включает полное обслуживание и ремонт,
+            возможность легкой смены оборудования, если появятся новые требования.
           </p>
         </div>
         <div class="col-lg-6">
-          <img src="../img/arenda/slide3.webp" class="p-3 img-fluid" alt="кофе в офис с арендой кофемашины" />
+          <img
+            src="../img/arenda/slide3.webp"
+            class="p-3 img-fluid"
+            alt="кофе в офис с арендой кофемашины" />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row mb-4">
         <div class="col-lg-6">
-          <img src="../img/arenda/slide4.webp" class="p-3 img-fluid" alt="кофемашина на азс" />
+          <img
+            src="../img/arenda/slide4.webp"
+            class="p-3 img-fluid"
+            alt="кофемашина на азс" />
         </div>
         <div class="col-lg-6 px-4">
-          <a class="blacklink fw-medium fs-5 lh-lg" href="./dlya_azs.html">Кофемашина для АЗС в аренду</a>
+          <a class="blacklink fw-medium fs-5 lh-lg" href="./dlya_azs.html">
+            Кофемашина для АЗС в аренду
+          </a>
           <p class="magazine indent main-text-size">
-            Кофемашина на автозаправочной станции – это не просто удобство, а важная составляющая современного сервиса. Она позволяет водителям
- и пассажирам наслаждаться качественным кофе во время короткой остановки на заправке. Свежесваренный кофе из кофемашины обеспечивает
- энергию и повышает настроение, делая каждую остановку более приятной.</p> 
-            <p>Наличие кофемашины на АЗС помогает привлечь больше клиентов и
- создать положительное впечатление о вашем сервисе, подчеркивая вашу заботу об их комфорте и удобстве.
+            Кофемашина на автозаправочной станции – это не просто удобство, а важная
+            составляющая современного сервиса. Она позволяет водителям и пассажирам
+            наслаждаться качественным кофе во время короткой остановки на заправке.
+            Свежесваренный кофе из кофемашины обеспечивает энергию и повышает настроение,
+            делая каждую остановку более приятной.
+          </p>
+          <p>
+            Наличие кофемашины на АЗС помогает привлечь больше клиентов и создать
+            положительное впечатление о вашем сервисе, подчеркивая вашу заботу об их
+            комфорте и удобстве.
           </p>
         </div>
       </div>
     </div>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Что нужно для сотрудничества</h3>
     </div>
     <div class="container timeline">
@@ -1589,7 +1616,9 @@
                 alt="кофемашина в прокат" />
             </div>
             <div class="slider__item">
-              <img data-lazy="./img/slider_arenda/necta_koro_prime.webp" alt="кофемашина для заправки" />
+              <img
+                data-lazy="./img/slider_arenda/necta_koro_prime.webp"
+                alt="кофемашина для заправки" />
             </div>
             <div class="slider__item">
               <img
@@ -1782,7 +1811,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -1872,7 +1901,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="../js/modules/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
       $(document).ready(function () {
         $(".slider").slick({
