--- a/src/ru/dlya_magazinov_i_setey.html
+++ b/src/ru/dlya_magazinov_i_setey.html
@@ -7,11 +7,11 @@
     <meta
       name="description"
       content="Кофемашины для магазина и торговых сетей в аренду" />
-    <meta
-      name="keywords"
-      content=/>
+    <meta name="keywords" content=/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Кофемашина для магазина | Аренда кофейного оборудования | Bianchi Professional</title>
+    <title>
+      Кофемашина для магазина | Аренда кофейного оборудования | Bianchi Professional
+    </title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -310,18 +310,27 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Главная</a></li>
-        <li class="breadcrumb-item"><a class="greenlink" href="./arenda.html">Аренда кофемашин</a></li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Главная</a>
+        </li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./arenda.html">Аренда кофемашин</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">Для магазинов</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Кофемашина для магазина</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
       <div class="container">
-        <a><img src="../img/dlya_magazinov_i_setey/seti2.webp" class="img-fluid" alt="net" /></a>
+        <a>
+          <img
+            src="../img/dlya_magazinov_i_setey/seti2.webp"
+            class="img-fluid"
+            alt="net" />
+        </a>
       </div>
     </div>
     <!-- /////////////////////////////////////////   Cards    ////////////////////////////////////////     -->
@@ -414,14 +423,17 @@
             <h5 class="">Что мы предлагаем?</h5>
             <ul class="main-text-size">
               <li>
-                Мы предлагаем кофейное оборудование в аренду для торговых сетей и магазинов под выполнение объёма реализации кофе.
-                Планы достаточно гибкие и зависят от ваших потребностей и выбраной кофемашины.
+                Мы предлагаем кофейное оборудование в аренду для торговых сетей и
+                магазинов под выполнение объёма реализации кофе. Планы достаточно гибкие и
+                зависят от ваших потребностей и выбраной кофемашины.
               </li>
               <li>
-                Рецептура напитков тщательно продумана, чтобы вы получили максимум вкуса при
-                рациональном расходе продукта.
+                Рецептура напитков тщательно продумана, чтобы вы получили максимум вкуса
+                при рациональном расходе продукта.
               </li>
-              <li>Мы бесплатно обеспечиваем полное сервисное сопровождение кофемашины.</li>
+              <li>
+                Мы бесплатно обеспечиваем полное сервисное сопровождение кофемашины.
+              </li>
               <li>
                 Наши специалисты проведут мастер-класс для ваших сотрудников по работе с
                 выбранной кофемашиной.
@@ -501,47 +513,58 @@
           <div class="container text-center">
             <div class="row justify-content-between">
               <div class="col-4">КОФЕ И ГОРЯЧИЕ НАПИТКИ</div>
-              <div class="col-4">
-              </div>
+              <div class="col-4"></div>
             </div>
           </div>
           <div class="slider">
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-beans-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide1.webp" alt="кофе зерновой Beabs Blend" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide1.webp"
+                  alt="кофе зерновой Beabs Blend" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./zernovoy_kofe.html#ancor-elite-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide2.webp" alt="кофе в зёрнах Elite" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide2.webp"
+                  alt="кофе в зёрнах Elite" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-milk-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide3.webp" alt="сухая молочная смесь" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide3.webp"
+                  alt="сухая молочная смесь" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-irish-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide4.webp" alt="капучино Ирландский Виски" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide4.webp"
+                  alt="капучино Ирландский Виски" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-catalana-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide5.webp" alt="капучино Крема Каталана" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide5.webp"
+                  alt="капучино Крема Каталана" />
+              </a>
             </div>
             <div class="slider__item">
               <a href="./moloko_shokolad.html#ancor-cacao-ru">
-              <img data-lazy="./img/slider_dlya_magazinov_setey/slide6.webp" alt="горячий какао" />
-            </a>
+                <img
+                  data-lazy="./img/slider_dlya_magazinov_setey/slide6.webp"
+                  alt="горячий какао" />
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- /////////////////////////////////////////   Timeline    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Что нужно для сотрудничества</h3>
     </div>
     <div class="container timeline">
@@ -592,7 +615,8 @@
                 <h5>Обслуживание</h5>
                 <p class="lh-sm text-muted">
                   <small>
-                    Полное сопровождение и бесплатная техническая поддержка на протяжении всего сотрудничества.
+                    Полное сопровождение и бесплатная техническая поддержка на протяжении
+                    всего сотрудничества.
                   </small>
                 </p>
               </div>
@@ -608,8 +632,8 @@
           <div>
             <h5 class="green text-center">НЕ ЗНАЕТЕ, КАКУЮ КОФЕМАШИНУ ВЫБРАТЬ?</h5>
             <p class="indent">
-              Оставьте заявку, и мы подберем для вас идеальную кофемашину и кофе,
-              учитывая ваши предпочтения и потребности.
+              Оставьте заявку, и мы подберем для вас идеальную кофемашину и кофе, учитывая
+              ваши предпочтения и потребности.
             </p>
           </div>
         </div>
@@ -680,19 +704,27 @@
           <div class="col justify-content-md-center">
             <div class="text-wrap text-left">
               <p>
-                Аренда кофемашины для магазина и торговых сетей – это идеальное решение, если вы хотите порадовать своих клиентов 
-                качественным кофе, не тратя большие суммы на покупку оборудования. Это особенно актуально для бизнесов, стремящихся 
-                повысить лояльность посетителей и увеличить прибыль, предлагая дополнительные услуги.
-            </p>
-            <p>
-              Благодаря возможности взять в аренду кофемашину, вы получаете современное оборудование без необходимости разового большого инвестиционного вложения. Более того – 
-              полное сервисное обслуживание и ремонт, позволяющий вам сосредоточиться на основной деятельности, не беспокоясь о внезапном окончании ингредиентов 
-              и возможных поломках. Беря в аренду кофемашину, вы выбираете ту, которая лучше отвечает потребностям вашего магазина. А если ваш бизнес растет, всегда есть 
-              возможность выбрать более продуктивную кофемашину.
-            </p>
-            <p>
-              Таким образом, бесплатная аренда кофемашин – это не только удобный, но и выгодный вариант для любого магазина, который стремится предоставлять своим клиентам больше, чем просто товары.
-            </p>
+                Аренда кофемашины для магазина и торговых сетей – это идеальное решение,
+                если вы хотите порадовать своих клиентов качественным кофе, не тратя
+                большие суммы на покупку оборудования. Это особенно актуально для
+                бизнесов, стремящихся повысить лояльность посетителей и увеличить прибыль,
+                предлагая дополнительные услуги.
+              </p>
+              <p>
+                Благодаря возможности взять в аренду кофемашину, вы получаете современное
+                оборудование без необходимости разового большого инвестиционного вложения.
+                Более того – полное сервисное обслуживание и ремонт, позволяющий вам
+                сосредоточиться на основной деятельности, не беспокоясь о внезапном
+                окончании ингредиентов и возможных поломках. Беря в аренду кофемашину, вы
+                выбираете ту, которая лучше отвечает потребностям вашего магазина. А если
+                ваш бизнес растет, всегда есть возможность выбрать более продуктивную
+                кофемашину.
+              </p>
+              <p>
+                Таким образом, бесплатная аренда кофемашин – это не только удобный, но и
+                выгодный вариант для любого магазина, который стремится предоставлять
+                своим клиентам больше, чем просто товары.
+              </p>
             </div>
           </div>
         </div>
@@ -802,7 +834,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -891,7 +923,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="../js/modules/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
       $(document).ready(function () {
         $(".slider").slick({
@@ -925,7 +957,5 @@
         });
       });
     </script>
-  </body>
-</html>
   </body>
 </html>
