--- a/src/ru/index.html
+++ b/src/ru/index.html
@@ -8,11 +8,11 @@
       name="description"
       content="✔Профессиональное кофейное оборудование в аренду
     ✔Более 5000 клиентов ✔Оригинальная рецептура напитков ✔16 лет присутствия на рынке" />
-    <meta
-      name="keywords"
-      content />
+    <meta name="keywords" content />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Бесплатная аренда кофемашины при покупке кофе | Кофейные машины для бизнеса</title>
+    <title>
+      Бесплатная аренда кофемашины при покупке кофе | Кофейные машины для бизнеса
+    </title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -284,7 +284,9 @@
                       <a class="dropdown-item" href="./syropi.html">Сиропы к кофе</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="./rashodniki.html">Расходные материалы</a>
+                      <a class="dropdown-item" href="./rashodniki.html">
+                        Расходные материалы
+                      </a>
                     </li>
                   </ul>
                 </li>
@@ -333,16 +335,17 @@
     </div>
     <!-- /////////////////////////////////////////   Main text    ////////////////////////////////////////     -->
     <section class="main-text main-text-size mb-4">
-      <div class="container" style="width: 80%;">
+      <div class="container" style="width: 80%">
         <div class="row">
           <div class="col justify-content-md-center">
             <!-- <h1 class="green text-center">О КОМПАНИИ</h1> -->
             <p class="indent text-wrap text-center">
-              Мы — команда профессионалов, работающая на кофейном рынке Украины с 2005 года.
-              года. За это время мы получили большой опыт в организации сервиса по продаже горячих
-              напитков. Наша деятельность помогает партнерам удовлетворить свои потребности
-              клиентов в этом направлении. Разработанные нами оригинальные рецепты узнаваемы
-              потребителями благодаря новейшим вкусам и оформлению напитков.
+              Мы — команда профессионалов, работающая на кофейном рынке Украины с 2005
+              года. года. За это время мы получили большой опыт в организации сервиса по
+              продаже горячих напитков. Наша деятельность помогает партнерам удовлетворить
+              свои потребности клиентов в этом направлении. Разработанные нами
+              оригинальные рецепты узнаваемы потребителями благодаря новейшим вкусам и
+              оформлению напитков.
             </p>
           </div>
         </div>
@@ -352,7 +355,7 @@
     <section class="indexicons">
       <div class="container indexcards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="../img/index/icon1.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -363,19 +366,19 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="../img/index/icon2.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
                 <h5 class="fw-bold">3 000 000 + напитков</h5>
                 <p class="card-text main-text-size">
-                  Более чем тремя миллионами оригинальных напитков ежемесячно наслаждаются наши счастливые
-                  потребители.
+                  Более чем тремя миллионами оригинальных напитков ежемесячно наслаждаются
+                  наши счастливые потребители.
                 </p>
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="../img/index/icon3.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -387,7 +390,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="../img/index/icon4.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -399,7 +402,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="card text-center">
               <img src="../img/index/icon5.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -410,7 +413,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -452,7 +455,9 @@
           </div>
           <div class="slider">
             <div class="slider__item">
-              <img data-lazy="./img/slider_index/necta_koro_prime.webp" alt="аренда кофемашин винница" />
+              <img
+                data-lazy="./img/slider_index/necta_koro_prime.webp"
+                alt="аренда кофемашин винница" />
             </div>
             <div class="slider__item">
               <img
@@ -460,20 +465,26 @@
                 alt="кофемашина в аренду киев" />
             </div>
             <div class="slider__item">
-              <img data-lazy="./img/slider_index/gaia_touch.webp" alt="кофемашина на прокат харьков" />
+              <img
+                data-lazy="./img/slider_index/gaia_touch.webp"
+                alt="кофемашина на прокат харьков" />
             </div>
             <div class="slider__item">
-              <img data-lazy="./img/slider_index/bianchi_talia_touch.webp" alt="аренда кофемашин чернигов" />
+              <img
+                data-lazy="./img/slider_index/bianchi_talia_touch.webp"
+                alt="аренда кофемашин чернигов" />
             </div>
             <div class="slider__item">
-              <img data-lazy="./img/slider_index/necta_korinto_prime.webp" alt="аренда кофемашины хмельницкий" />
+              <img
+                data-lazy="./img/slider_index/necta_korinto_prime.webp"
+                alt="аренда кофемашины хмельницкий" />
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- /////////////////////////////////////////   Timeline    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Что нужно для сотрудничества</h3>
     </div>
     <div class="container timeline">
@@ -645,7 +656,7 @@
     </section>
 
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>НАШИ ПАРТНЁРЫ</h3>
     </div>
     <div class="container text-center partners mb-4">
@@ -718,36 +729,77 @@
     </div>
     <!-- /////////////////////////////////////////   Main text    ////////////////////////////////////////     -->
     <section class="main-text main-text-size mb-4">
-      <div class="container px-4" style="width: 80%;">
+      <div class="container px-4" style="width: 80%">
         <div class="row">
           <div class="col justify-content-md-center">
-            <div class="text-wrap text-left" >
-              <h3>Сервисная компания Bianchi Professional – Ваш кофейный бизнес «под ключ»</h3>
-              <p>Мы предлагаем вам взять в аренду кофемашину для бизнеса любого масштаба. Наши кофемашины – 
-                отличное решение для офисов, магазинов, торговых сетей, АЗС и других организаций, которые стремятся обеспечить своим клиентам и сотрудникам качественный кофе.</p>
-                <h3>Почему выгодно взять кофемашину в аренду от BianchiProf?</h3>
-                <ul>
-                  <li><strong>Широкий выбор кофейного оборудования:</strong> в нашем ассортименте вы найдете модели для любых нужд – от компактных офисных кофемашин до вендинговых автоматов с горячими напитками и снеками.</li>
-                    <li><strong>Гибкие условия сотрудничества:</strong> аренда кофемашины бесплатно при покупке кофе. План продаж кофе зависит от выбранного кофейного оборудования и специфики вашего бизнеса.</li>
-                    <li><strong>Полное техническое обслуживание:</strong> наши специалисты обеспечат регулярное техническое обслуживание и быстрое устранение 
-                      любых неполадок, чтобы вы могли воспользоваться услугами кофемашины.</li>
-                     <li><strong>Полное обеспечение кофе и сопутствующими товарами:</strong> зерновой кофе высшего качества только от проверенных европейских производителей. Широкий ассортимент горячих напитков: капучино, 
-                      шоколад, молоко, чай. А также обязательные сопутствующие товары: сиропы для кофе, фирменные кофейные и чайные стаканы, сахар в стиках, мешалки для кофе.</li>
-                        <li><strong>Реклама и маркетинг:</strong> для маркетинговых нужд мы обеспечиваем вас печатными материалами, штендерами, брендированными тумбами и другой рекламной продукцией.</li>
-                </ul>
-                <p>Наши представительства уже работают во многих регионах Украины, поэтому аренда кофемашин доступна в таких городах, как Киев, Харьков, Белая Церковь, Умань, Борисполь, Бровары, Тернополь, Винница, 
-                  Хмельницкий, Ровно, Черновцы и Чернигов. Благодаря вендингу мы присутствуем практически во всех регионах Украины. Независимо от вашего местоположения, вы можете рассчитывать на качественное обслуживание 
-                  и поддержку со стороны компании Bianchi Professional.</p>
-                  <h3>Как это работает?</h3>
-                  <ol>
-                    <li>Оставьте заявку на сайте или позвоните по номерам.</li>
-    <li>Наши менеджеры помогут вам выбрать подходящую модель в зависимости от ваших желаний, бюджета и специфики бизнеса.</li>
-    <li>Мы доставим и установим кофейное оборудование в удобное для вас время.</li>
-    <li>•	Вы получите полное сервисное обслуживание и поддержку на весь период аренды.</li>
-                  </ol>
-
+            <div class="text-wrap text-left">
+              <h3>
+                Сервисная компания Bianchi Professional – Ваш кофейный бизнес «под ключ»
+              </h3>
+              <p>
+                Мы предлагаем вам взять в аренду кофемашину для бизнеса любого масштаба.
+                Наши кофемашины – отличное решение для офисов, магазинов, торговых сетей,
+                АЗС и других организаций, которые стремятся обеспечить своим клиентам и
+                сотрудникам качественный кофе.
+              </p>
+              <h3>Почему выгодно взять кофемашину в аренду от BianchiProf?</h3>
+              <ul>
+                <li>
+                  <strong>Широкий выбор кофейного оборудования:</strong>
+                  в нашем ассортименте вы найдете модели для любых нужд – от компактных
+                  офисных кофемашин до вендинговых автоматов с горячими напитками и
+                  снеками.
+                </li>
+                <li>
+                  <strong>Гибкие условия сотрудничества:</strong>
+                  аренда кофемашины бесплатно при покупке кофе. План продаж кофе зависит
+                  от выбранного кофейного оборудования и специфики вашего бизнеса.
+                </li>
+                <li>
+                  <strong>Полное техническое обслуживание:</strong>
+                  наши специалисты обеспечат регулярное техническое обслуживание и быстрое
+                  устранение любых неполадок, чтобы вы могли воспользоваться услугами
+                  кофемашины.
+                </li>
+                <li>
+                  <strong>Полное обеспечение кофе и сопутствующими товарами:</strong>
+                  зерновой кофе высшего качества только от проверенных европейских
+                  производителей. Широкий ассортимент горячих напитков: капучино, шоколад,
+                  молоко, чай. А также обязательные сопутствующие товары: сиропы для кофе,
+                  фирменные кофейные и чайные стаканы, сахар в стиках, мешалки для кофе.
+                </li>
+                <li>
+                  <strong>Реклама и маркетинг:</strong>
+                  для маркетинговых нужд мы обеспечиваем вас печатными материалами,
+                  штендерами, брендированными тумбами и другой рекламной продукцией.
+                </li>
+              </ul>
+              <p>
+                Наши представительства уже работают во многих регионах Украины, поэтому
+                аренда кофемашин доступна в таких городах, как Киев, Харьков, Белая
+                Церковь, Умань, Борисполь, Бровары, Тернополь, Винница, Хмельницкий,
+                Ровно, Черновцы и Чернигов. Благодаря вендингу мы присутствуем практически
+                во всех регионах Украины. Независимо от вашего местоположения, вы можете
+                рассчитывать на качественное обслуживание и поддержку со стороны компании
+                Bianchi Professional.
+              </p>
+              <h3>Как это работает?</h3>
+              <ol>
+                <li>Оставьте заявку на сайте или позвоните по номерам.</li>
+                <li>
+                  Наши менеджеры помогут вам выбрать подходящую модель в зависимости от
+                  ваших желаний, бюджета и специфики бизнеса.
+                </li>
+                <li>
+                  Мы доставим и установим кофейное оборудование в удобное для вас время.
+                </li>
+                <li>
+                  • Вы получите полное сервисное обслуживание и поддержку на весь период
+                  аренды.
+                </li>
+              </ol>
             </div>
-              </div>
+          </div>
         </div>
       </div>
     </section>
@@ -881,7 +933,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -970,7 +1022,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="../js/modules/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
       $(document).ready(function () {
         $(".slider").slick({
@@ -1004,7 +1056,5 @@
         });
       });
     </script>
-  </body>
-</html>
   </body>
 </html>
