--- a/src/ru/moloko_shokolad.html
+++ b/src/ru/moloko_shokolad.html
@@ -310,7 +310,7 @@
         <li class="breadcrumb-item active" aria-current="page">Горячие напитки</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Капучино, молоко, шоколад</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -662,7 +662,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
