--- a/src/ru/postovie.html
+++ b/src/ru/postovie.html
@@ -307,7 +307,7 @@
         </div>
       </div>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Классические постовые кофемашины</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -503,7 +503,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
