--- a/src/ru/rashodniki.html
+++ b/src/ru/rashodniki.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta name="keywords" content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Одноразовые стаканы для горячих напитков | Сахар порционный | Мешалки деревянные</title>
+    <title>
+      Одноразовые стаканы для горячих напитков | Сахар порционный | Мешалки деревянные
+    </title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -307,11 +306,13 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Главная</a></li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Главная</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">Расходные материалы</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Расходные материалы</h1>
     </div>
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
@@ -360,17 +361,18 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">
-                Картонные стаканчики для кофе Bianchi
-              </h3><br />
+              <h3 class="text-center">Картонные стаканчики для кофе Bianchi</h3>
+              <br />
               <small>
-                <p class="lh-sm">Золотые стаканы компании Bianchi Professional узнаваемы потребителем во многих городах Украины.</p>
                 <p class="lh-sm">
-                  Стаканы изготавливаются из прочного качественного картона с применением наружной ламинации.
+                  Золотые стаканы компании Bianchi Professional узнаваемы потребителем во
+                  многих городах Украины.
                 </p>
                 <p class="lh-sm">
-                  В ассортименте представлены разные объемы.
+                  Стаканы изготавливаются из прочного качественного картона с применением
+                  наружной ламинации.
                 </p>
+                <p class="lh-sm">В ассортименте представлены разные объемы.</p>
               </small>
             </div>
           </div>
@@ -389,7 +391,7 @@
                       Объём:
                       <br />
                     </b>
-                  300 мл
+                    300 мл
                   </li>
                   <br />
                   <li>
@@ -415,14 +417,17 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">
-                Картонные стаканчики для чая Bianchi
-              </h3><br />
+              <h3 class="text-center">Картонные стаканчики для чая Bianchi</h3>
+              <br />
               <small>
-                <p class="lh-sm">Одноразовые стаканчики для чая Bianchi – это сочетание стиля, удобства и экологичности. 
-                  Изготовлен из высококачественного картона, этот стакан идеальна для коллекции чаев Bianchi.</p>
                 <p class="lh-sm">
-                  Стаканы изготавливаются из прочного качественного картона с применением наружной ламинации.
+                  Одноразовые стаканчики для чая Bianchi – это сочетание стиля, удобства и
+                  экологичности. Изготовлен из высококачественного картона, этот стакан
+                  идеальна для коллекции чаев Bianchi.
+                </p>
+                <p class="lh-sm">
+                  Стаканы изготавливаются из прочного качественного картона с применением
+                  наружной ламинации.
                 </p>
               </small>
             </div>
@@ -468,15 +473,16 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Сахар порционный
-              </h3>
+              <h3 class="text-center">Сахар порционный</h3>
               <br />
               <small>
                 <p class="lh-sm">
-                  Сахар в стиках – это удобный и гигиенический способ добавить сладости вашему напитку.
+                  Сахар в стиках – это удобный и гигиенический способ добавить сладости
+                  вашему напитку.
                 </p>
                 <p class="lh-sm">
-                  Индивидуально упакованный, он обеспечивает точную дозировку, гарантируя вашим клиентам и гостям максимальный комфорт.
+                  Индивидуально упакованный, он обеспечивает точную дозировку, гарантируя
+                  вашим клиентам и гостям максимальный комфорт.
                 </p>
               </small>
             </div>
@@ -501,29 +507,29 @@
                   <br />
                   <li>
                     <b>
-                      Максимальная<br /> 
+                      Максимальная
+                      <br />
                       температура:
                       <br />
                     </b>
                     до 90°С
                   </li>
                   <br />
-                  
                 </ul>
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">
-                Деревянные мешалки 
-                для кофе
-              </h3><br />
+              <h3 class="text-center">Деревянные мешалки для кофе</h3>
+              <br />
               <small>
                 <p class="lh-sm">
-                  Это натуральный и экологичный аксессуар, который идеально дополняет сервис горячих напитков в вашем заведении.
+                  Это натуральный и экологичный аксессуар, который идеально дополняет
+                  сервис горячих напитков в вашем заведении.
                 </p>
                 <p class="lh-sm">
-                  Изготовленные из высококачественного дерева, мешалки удобны и не влияют на вкус напитка. Они подходят как для кофе, 
-                  так и для чая, и станут отличной альтернативой пластиковым мешалкам.
+                  Изготовленные из высококачественного дерева, мешалки удобны и не влияют
+                  на вкус напитка. Они подходят как для кофе, так и для чая, и станут
+                  отличной альтернативой пластиковым мешалкам.
                 </p>
               </small>
             </div>
@@ -635,7 +641,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
