--- a/src/ru/syropi.html
+++ b/src/ru/syropi.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta name="keywords" content=/>
+    <meta name="description" content= /> <meta name="keywords" content=/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Ассорти сиропов для кофе | Топпинг для кофе | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
@@ -306,11 +303,13 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Главная</a></li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Главная</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">Сиропы к кофе</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Сиропы для кофе</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -320,23 +319,34 @@
         <div class="col-10">
           <h5 class="text-left fw-bold">
             <small>
-              Кофейные сиропы – это отличный способ разнообразить вкус любимого напитка, придавая ему особые нотки и аромат.
+              Кофейные сиропы – это отличный способ разнообразить вкус любимого напитка,
+              придавая ему особые нотки и аромат.
             </small>
           </h5>
           <ul>
             <small>
               <li>
-                Наш ассортимент сиропов включает широкий выбор вкусов — от классических, таких как ваниль, карамель и лесные орехи, до 
-                более оригинальных и экзотических, таких как мята, кокос или соленая карамель. Каждый сироп создан для того, чтобы подчеркнуть вкус кофе и придать ему новые оттенки.
+                Наш ассортимент сиропов включает широкий выбор вкусов — от классических,
+                таких как ваниль, карамель и лесные орехи, до более оригинальных и
+                экзотических, таких как мята, кокос или соленая карамель. Каждый сироп
+                создан для того, чтобы подчеркнуть вкус кофе и придать ему новые оттенки.
               </li>
               <li>
-                Высокая концентрация вкуса позволяет экономно использовать сироп, добавляя всего несколько капель для достижения желаемого эффекта.
+                Высокая концентрация вкуса позволяет экономно использовать сироп, добавляя
+                всего несколько капель для достижения желаемого эффекта.
               </li>
               <li>
-                Наши сиропы подходят для любого вида кофе: эспрессо, лат, капучино или американо. Они легко смешиваются с горячими и холодными напитками без изменения их текстуры. 
-                Вы можете добавлять сиропы как к горячему, так и к холодному кофе, создавая оригинальные кофейные коктейли и сезонные напитки.
+                Наши сиропы подходят для любого вида кофе: эспрессо, лат, капучино или
+                американо. Они легко смешиваются с горячими и холодными напитками без
+                изменения их текстуры. Вы можете добавлять сиропы как к горячему, так и к
+                холодному кофе, создавая оригинальные кофейные коктейли и сезонные
+                напитки.
               </li>
-              <li>Герметичные бутылки с дозаторами позволяют легко контролировать количество добавленного сиропа, что особенно важно для профессионального приготовления напитков.</li>
+              <li>
+                Герметичные бутылки с дозаторами позволяют легко контролировать количество
+                добавленного сиропа, что особенно важно для профессионального
+                приготовления напитков.
+              </li>
             </small>
           </ul>
         </div>
@@ -393,7 +403,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/cocos.webp" class="card-img-top" alt="сироп в кофе" />
+              <img
+                src="../img/syropi/cocos.webp"
+                class="card-img-top"
+                alt="сироп в кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -431,7 +444,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/almonds.webp" class="card-img-top" alt="миндальный сироп для кофе" />
+              <img
+                src="../img/syropi/almonds.webp"
+                class="card-img-top"
+                alt="миндальный сироп для кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -601,7 +617,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/bounty.webp" class="card-img-top" alt="кокосовый сироп для кофе Bounty" />
+              <img
+                src="../img/syropi/bounty.webp"
+                class="card-img-top"
+                alt="кокосовый сироп для кофе Bounty" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -685,7 +704,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/caramel.webp" class="card-img-top" alt="карамельный сироп для кофе" />
+              <img
+                src="../img/syropi/caramel.webp"
+                class="card-img-top"
+                alt="карамельный сироп для кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -975,7 +997,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/lime.webp" class="card-img-top" alt="сироп для кофе лайм" />
+              <img
+                src="../img/syropi/lime.webp"
+                class="card-img-top"
+                alt="сироп для кофе лайм" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1060,7 +1085,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/maple.webp" class="card-img-top" alt="кленовый сироп для кофе" />
+              <img
+                src="../img/syropi/maple.webp"
+                class="card-img-top"
+                alt="кленовый сироп для кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1102,7 +1130,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/melon.webp" class="card-img-top" alt="Сироп для кофе дыня" />
+              <img
+                src="../img/syropi/melon.webp"
+                class="card-img-top"
+                alt="Сироп для кофе дыня" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1139,7 +1170,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/mint.webp" class="card-img-top" alt="мятный сироп для кофе" />
+              <img
+                src="../img/syropi/mint.webp"
+                class="card-img-top"
+                alt="мятный сироп для кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1180,7 +1214,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/mojito.webp" class="card-img-top" alt="сироп для кофе мохито" />
+              <img
+                src="../img/syropi/mojito.webp"
+                class="card-img-top"
+                alt="сироп для кофе мохито" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1218,7 +1255,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/orange.webp" class="card-img-top" alt="апельсиновый сироп для кофе" />
+              <img
+                src="../img/syropi/orange.webp"
+                class="card-img-top"
+                alt="апельсиновый сироп для кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1296,7 +1336,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/peach.webp" class="card-img-top" alt="персиковый сироп для кофе" />
+              <img
+                src="../img/syropi/peach.webp"
+                class="card-img-top"
+                alt="персиковый сироп для кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1337,7 +1380,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/popcorn.webp" class="card-img-top" alt="сироп для кофе попкорн" />
+              <img
+                src="../img/syropi/popcorn.webp"
+                class="card-img-top"
+                alt="сироп для кофе попкорн" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1459,7 +1505,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/vanilla.webp" class="card-img-top" alt="сироп для кофе ваниль" />
+              <img
+                src="../img/syropi/vanilla.webp"
+                class="card-img-top"
+                alt="сироп для кофе ваниль" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1501,7 +1550,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/watermelon.webp" class="card-img-top" alt="сироп для кофе арбуз" />
+              <img
+                src="../img/syropi/watermelon.webp"
+                class="card-img-top"
+                alt="сироп для кофе арбуз" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1528,7 +1580,8 @@
               <h3 class="text-center">Сироп "Арбуз"</h3>
               <small>
                 <p class="lh-sm">
-                  Освежающий богатый вкус спелого арбуза прекрасно дополнит коктейль или мороженое.
+                  Освежающий богатый вкус спелого арбуза прекрасно дополнит коктейль или
+                  мороженое.
                 </p>
                 <p class="lh-sm">
                   Без чрезмерной сладости с долгим приятным послевкусием.
@@ -1570,7 +1623,8 @@
               <h3 class="text-center">Сироп "Жёлтый банан"</h3>
               <small>
                 <p class="lh-sm">
-                  Насыщенный бархатно-сладкий вкус спелого банана придется по вкусу всем сладкоежкам.
+                  Насыщенный бархатно-сладкий вкус спелого банана придется по вкусу всем
+                  сладкоежкам.
                 </p>
                 <p class="lh-sm">Отлично подходит для десертов, мороженого, коктейлей.</p>
               </small>
@@ -1610,10 +1664,12 @@
               <h3 class="text-center">Сироп "Шоколадное печенье"</h3>
               <small>
                 <p class="lh-sm">
-                  Богатый, насыщенный вкус с нотками хрустящего шоколадного печенья придаст любимому напитку особый шарм и тепло.
+                  Богатый, насыщенный вкус с нотками хрустящего шоколадного печенья
+                  придаст любимому напитку особый шарм и тепло.
                 </p>
                 <p class="lh-sm">
-                  Этот сироп идеально подходит для капучино, латте или горячего шоколада, превращая их в изысканный десертный напиток.
+                  Этот сироп идеально подходит для капучино, латте или горячего шоколада,
+                  превращая их в изысканный десертный напиток.
                 </p>
               </small>
             </div>
@@ -1622,7 +1678,10 @@
         <div class="col col-auto col-sm-6 col-md-3 mb-1">
           <div class="card hover-text-one">
             <figure class="effect-text-three">
-              <img src="../img/syropi/klubnicnui_beylez.webp" class="card-img-top" alt="сироп бейлис для кофе" />
+              <img
+                src="../img/syropi/klubnicnui_beylez.webp"
+                class="card-img-top"
+                alt="сироп бейлис для кофе" />
               <figcaption class="goods">
                 <ul class="lh-sm">
                   <li>
@@ -1649,11 +1708,13 @@
               <h3 class="text-center">Сироп "Клубничный бейлиз"</h3>
               <small>
                 <p class="lh-sm">
-                  Это изысканное сочетание нежной клубники и кремового аромата 
-                  популярного ирландского ликера. Этот сироп дарит кофе изящную сладость с легкими ягодными нотками, делая каждый глоток невероятно приятным и праздничным.
+                  Это изысканное сочетание нежной клубники и кремового аромата популярного
+                  ирландского ликера. Этот сироп дарит кофе изящную сладость с легкими
+                  ягодными нотками, делая каждый глоток невероятно приятным и праздничным.
                 </p>
                 <p class="lh-sm">
-                  Добавьте его в латте, фрапе или кофейные коктейли, чтобы почувствовать всю роскошь вкуса и ароматов.
+                  Добавьте его в латте, фрапе или кофейные коктейли, чтобы почувствовать
+                  всю роскошь вкуса и ароматов.
                 </p>
               </small>
             </div>
@@ -1765,7 +1826,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
