--- a/src/vending.html
+++ b/src/vending.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta name="keywords" content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Вендінгові автомати самообслуговування для кави та снеків | Bianchi Professional</title>
+    <title>
+      Вендінгові автомати самообслуговування для кави та снеків | Bianchi Professional
+    </title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -304,11 +303,13 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Головна</a></li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Головна</a>
+        </li>
         <li class="breadcrumb-item active" aria-current="page">Вендінг</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Встановлення кавових та снекових вендінгових апаратів</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -384,7 +385,7 @@
       </div>
     </section>
     <!-- /////////////////////////////////////////   Magazin    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Послуги</h3>
     </div>
     <div class="magazine container">
@@ -396,12 +397,13 @@
           <p class="p-4 magazine indent">
             Складно уявити життя будь-якої сучасної компанії без аромату кави. Найбільш
             зручний та вигідний спосіб підвищити комфорт та ефективність роботи ваших
-            співробітників - встановлення кавових та <a class="greenlink" href="./vending_snack.html">снекових автоматів</a> в вашому офісі, на
-            підприємстві або в торговому/бізнес центрі, магазині, начальному закладі.
-            Пропонуємо встановлення та обслуговування кавового обладнання преміум-класу
-            (виробник - Італія). Апарати готують якісну зернову каву від лідерів
-            європейського ринку та різноманітні не кавові напої - Cappuccino Crema
-            Catalana, Cappuccino Irish Whiskey, гарячий шоколад, чай.
+            співробітників - встановлення кавових та
+            <a class="greenlink" href="./vending_snack.html">снекових автоматів</a>
+            в вашому офісі, на підприємстві або в торговому/бізнес центрі, магазині,
+            начальному закладі. Пропонуємо встановлення та обслуговування кавового
+            обладнання преміум-класу (виробник - Італія). Апарати готують якісну зернову
+            каву від лідерів європейського ринку та різноманітні не кавові напої -
+            Cappuccino Crema Catalana, Cappuccino Irish Whiskey, гарячий шоколад, чай.
           </p>
         </div>
       </div>
@@ -441,7 +443,7 @@
         </div>
       </div>
     </div>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Що потрібно для встановлення кавомашини</h3>
     </div>
     <div class="container timeline">
@@ -468,7 +470,8 @@
                 <p class="lh-sm text-muted">
                   <small>
                     Наш фахівець зв'яжеться з Вами для визначення місця установки кавового
-                    апарату<span class="select text-nowrap">*</span>
+                    апарату
+                    <span class="select text-nowrap">*</span>
                   </small>
                 </p>
               </div>
@@ -521,7 +524,7 @@
       </button>
     </div>
     <!-- /////////////////////////////////////////   Equipment    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Обладнання</h3>
     </div>
     <div class="container carousel-wrapper">
@@ -645,7 +648,7 @@
     </div>
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
     <div class="partners-wrapper">
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h3>Наші партнери</h3>
       </div>
       <div class="container text-center partners mb-4">
@@ -826,7 +829,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
