--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta name="keywords" content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>
-      Автомати для продажу кави |  Вендінгові апарати
-    </title>
+    <title>Автомати для продажу кави | Вендінгові апарати</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -308,12 +303,16 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Головна</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Вендінгові автомати кави</li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Головна</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Вендінгові автомати кави
+        </li>
       </ol>
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Вендінгові апарати для кави та гарячих напоїв</h1>
     </div>
     <div class="description container">
@@ -322,18 +321,25 @@
         <div class="col-10">
           <h5 class="text-left fw-bold">
             <small>
-              Вендінгові апарати для кави та гарячих напоїв — це сучасне рішення для забезпечення швидкого та зручного доступу до улюблених напоїв.
+              Вендінгові апарати для кави та гарячих напоїв — це сучасне рішення для
+              забезпечення швидкого та зручного доступу до улюблених напоїв.
             </small>
           </h5>
           <ul>
             <small>
-              <li>Ідеальні для офісів, торгових центрів, заправних станцій та будь-яких місць із високою прохідністю, вендінгові апарати пропонують 
-                широкий асортимент кавових напоїв, чаю, какао та гарячого шоколаду.</li>
               <li>
-                Висока якість інгредієнтів та простота у використанні гарантують відмінний смак та задоволення кожного клієнта.
+                Ідеальні для офісів, торгових центрів, заправних станцій та будь-яких
+                місць із високою прохідністю, вендінгові апарати пропонують широкий
+                асортимент кавових напоїв, чаю, какао та гарячого шоколаду.
               </li>
-              <li>Наші вендінгові апарати обладнані системою оплати банківською картою за
-                допомогою мобільного додатку ProstoPay, а також Googl Pay, Apple Pay, NFC.</li>
+              <li>
+                Висока якість інгредієнтів та простота у використанні гарантують відмінний
+                смак та задоволення кожного клієнта.
+              </li>
+              <li>
+                Наші вендінгові апарати обладнані системою оплати банківською картою за
+                допомогою мобільного додатку ProstoPay, а також Googl Pay, Apple Pay, NFC.
+              </li>
             </small>
           </ul>
         </div>
@@ -392,7 +398,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br /> Bianchi LEI 700</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi LEI 700
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">Автоматична вендінг-машина на 30 напоїв.</p>
                 <p class="lh-sm">
@@ -455,7 +466,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br /> Bianchi LEI 600 Smart</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi LEI 600 Smart
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
                   Автоматична вендінг-машина для приготування гарячих напоїв місткістю 600
@@ -517,7 +533,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br />Bianchi LEI 600 Touch</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi LEI 600 Touch
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
                   Вендінговий кавовий автомат місткістю 600 чашок на 30 напоїв з
@@ -591,7 +612,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br />Bianchi LEI 400</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi LEI 400
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">Автоматична вендінг-машина на 11 напоїв.</p>
                 <p class="lh-sm">
@@ -665,7 +691,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br />Bianchi LEI 400 Smart</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi LEI 400 Smart
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
                   Кавовий апарат Bianchi LEI 400 SMART – модифікована версія автомата LEI
@@ -732,7 +763,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br />Bianchi LEI 500 Touch</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi LEI 500 Touch
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
                   Цей автомат призначений для приготування й продажу гарячих.
@@ -742,7 +778,8 @@
                   панелі.
                 </p>
                 <p class="lh-sm">
-                  Збільшений бункер для зернової кави та два контейнери для розчинної кави.
+                  Збільшений бункер для зернової кави та два контейнери для розчинної
+                  кави.
                 </p>
                 <p class="lh-sm">
                   Вендінговий кавовий автомат Bianchi Lei 500 призначений для роботи в
@@ -800,7 +837,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br />Wittenborg 7600</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Wittenborg 7600
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
                   Автоматичний торговий кавовий вендінг-автомат виготовлений в Данії
@@ -869,22 +911,36 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br />Bianchi Lei 600 Plus 2 cups</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi Lei 600 Plus 2 cups
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
-                  Це інноваційний вендинговий апарат, створений для забезпечення швидкого приготування гарячих напоїв високої якості.
+                  Це інноваційний вендинговий апарат, створений для забезпечення швидкого
+                  приготування гарячих напоїв високої якості.
                 </p>
-                <p class="lh-sm">Сенсорний: монітор 21” FULL HD з технологією сенсорного екрану – мультимедіа (відео).</p>
+                <p class="lh-sm">
+                  Сенсорний: монітор 21” FULL HD з технологією сенсорного екрану –
+                  мультимедіа (відео).
+                </p>
                 <p class="lh-sm">
                   В апарат завантажуються два види стаканів для напоїв різного об'єму.
                 </p>
                 <p class="lh-sm">
-                  Апарат оснащений сучасною системою дозування кави та інгредієнтів, що забезпечує стабільний смак кожного напою. 
+                  Апарат оснащений сучасною системою дозування кави та інгредієнтів, що
+                  забезпечує стабільний смак кожного напою.
                 </p>
                 <p class="lh-sm">
-                  Інтуїтивно зрозумілий інтерфейс та широкий вибір напоїв роблять цей апарат універсальним для використання в офісах, на АЗС або у торгових центрах.
+                  Інтуїтивно зрозумілий інтерфейс та широкий вибір напоїв роблять цей
+                  апарат універсальним для використання в офісах, на АЗС або у торгових
+                  центрах.
                 </p>
-                <p class="lh-sm">Енергоефективність, простота обслуговування та елегантний дизайн.</p>
+                <p class="lh-sm">
+                  Енергоефективність, простота обслуговування та елегантний дизайн.
+                </p>
               </small>
             </div>
           </div>
@@ -937,23 +993,31 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Кавовий автомат <br />Bianchi Lei 700 Plus 2 cups</h3><br />
+              <h3 class="text-center">
+                Кавовий автомат
+                <br />
+                Bianchi Lei 700 Plus 2 cups
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
-                  Це вдосконалена версія вендингового апарата, яка поєднує в собі найсучасніші технології приготування напоїв та стильний зовнішній вигляд.
+                  Це вдосконалена версія вендингового апарата, яка поєднує в собі
+                  найсучасніші технології приготування напоїв та стильний зовнішній
+                  вигляд.
                 </p>
                 <p class="lh-sm">
-                  Автомат оснащений сенсорним монітором 32” FULL HD із можливістю відтворення медіа-контенту.
+                  Автомат оснащений сенсорним монітором 32” FULL HD із можливістю
+                  відтворення медіа-контенту.
                 </p>
                 <p class="lh-sm">
-                  В апарат завантажуються два види стаканів для напоїв різного об'єму. Максимальна загрузка 1000 шт.
+                  В апарат завантажуються два види стаканів для напоїв різного об'єму.
+                  Максимальна загрузка 1000 шт.
                 </p>
                 <p class="lh-sm">
-                  Додатковий модуль для продажу холодних напоїв, таких як коктейлі, чаї, вітамінні напої.
+                  Додатковий модуль для продажу холодних напоїв, таких як коктейлі, чаї,
+                  вітамінні напої.
                 </p>
-                <p class="lh-sm">
-                  Дизайн преміум-рівня
-                </p>
+                <p class="lh-sm">Дизайн преміум-рівня</p>
               </small>
             </div>
           </div>
@@ -1065,7 +1129,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
