--- a/src/vending_snack.html
+++ b/src/vending_snack.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta name="keywords" content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>
-      Снекові автомати | Вуличні автомати для продажу їжі та напоїв
-    </title>
+    <title>Снекові автомати | Вуличні автомати для продажу їжі та напоїв</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -306,12 +301,16 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Головна</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Вендінгові снекові автомати</li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Головна</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Вендінгові снекові автомати
+        </li>
       </ol>
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Вендінгові апарати для продажу снеків</h1>
     </div>
     <div class="description container">
@@ -320,19 +319,28 @@
         <div class="col-10">
           <h5 class="text-left fw-bold">
             <small>
-              Вендингові снекові апарати — це чудова можливість запропонувати клієнтам швидкий доступ до смачних перекусів.
+              Вендингові снекові апарати — це чудова можливість запропонувати клієнтам
+              швидкий доступ до смачних перекусів.
             </small>
           </h5>
           <ul>
             <small>
-              <li>Асортимент апаратів включає чіпси, батончики, печиво та інші популярні снеки, що ідеально доповнюють напої або 
-                можуть бути самостійним перекусом.</li>
+              <li>
+                Асортимент апаратів включає чіпси, батончики, печиво та інші популярні
+                снеки, що ідеально доповнюють напої або можуть бути самостійним перекусом.
+              </li>
               <li>
                 Наші вендінгові апарати обладнані системою оплати банківською картою за
                 допомогою мобільного додатку ProstoPay, а також Googl Pay, Apple Pay, NFC.
               </li>
-              <li>Такий сервіс стає незамінним у офісах, на АЗС, в навчальних закладах та торгових центрах.</li>
-              <li>Можливе комбінування снекового апарату з вендінг машиною для гарячих напоїв, з однією системою оплати.</li>
+              <li>
+                Такий сервіс стає незамінним у офісах, на АЗС, в навчальних закладах та
+                торгових центрах.
+              </li>
+              <li>
+                Можливе комбінування снекового апарату з вендінг машиною для гарячих
+                напоїв, з однією системою оплати.
+              </li>
             </small>
           </ul>
         </div>
@@ -399,15 +407,27 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Снековий апарат<br /> Bianchi Vista L Master</h3><br />
+              <h3 class="text-center">
+                Снековий апарат
+                <br />
+                Bianchi Vista L Master
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
-                  У стандартній комплектації апарат оснащений 6 полицями, які підходять для 
-                  зберігання різних видів товарів (снеки, пляшки, банки), а також додатковим бічним відділенням 
-                  з двома колонками для банок або пляшок, розташованим праворуч за панеллю керування.
+                  У стандартній комплектації апарат оснащений 6 полицями, які підходять
+                  для зберігання різних видів товарів (снеки, пляшки, банки), а також
+                  додатковим бічним відділенням з двома колонками для банок або пляшок,
+                  розташованим праворуч за панеллю керування.
                 </p>
-                <p class="lh-sm">На кожній полиці може розміщуватися 8 одинарних або 4 подвійних спіралі для продукції.</p>
-                <p class="lh-sm">В базовій версії апарат вміщує до 342 одиниць товарів, з можливістю виставити до 42 різних позицій.</p>
+                <p class="lh-sm">
+                  На кожній полиці може розміщуватися 8 одинарних або 4 подвійних спіралі
+                  для продукції.
+                </p>
+                <p class="lh-sm">
+                  В базовій версії апарат вміщує до 342 одиниць товарів, з можливістю
+                  виставити до 42 різних позицій.
+                </p>
                 <p class="lh-sm">
                   Додаткові колонки можуть зберігати до 60 пляшок по 0.5 л або 136 банок.
                 </p>
@@ -415,7 +435,8 @@
                   Видача товару відбувається через лоток у нижній частині апарата.
                 </p>
                 <p class="lh-sm">
-                  Завдяки системі "ліфт" товар видається більш дбайливо, що дозволяє розміщувати навіть крихкі продукти на верхніх полицях.
+                  Завдяки системі "ліфт" товар видається більш дбайливо, що дозволяє
+                  розміщувати навіть крихкі продукти на верхніх полицях.
                 </p>
               </small>
             </div>
@@ -479,7 +500,12 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Снековий апарат<br />Bianchi Vista M</h3><br />
+              <h3 class="text-center">
+                Снековий апарат
+                <br />
+                Bianchi Vista M
+              </h3>
+              <br />
               <small>
                 <p class="lh-sm">
                   Вендінг машина з охолодженням до 3° для продажу снеків, сендвічів,
@@ -498,8 +524,9 @@
                 <p class="lh-sm">Регульована висота полиць.</p>
                 <p class="lh-sm">LED підсвічування.</p>
                 <p class="lh-sm">Вікно видачі товарів з системою проти крадіжок.</p>
-                <p class="lh-sm">В базовій версії апарат вміщує до 340 одиниць товарів.</p>
-                
+                <p class="lh-sm">
+                  В базовій версії апарат вміщує до 340 одиниць товарів.
+                </p>
               </small>
             </div>
           </div>
@@ -566,7 +593,8 @@
               </figcaption>
             </figure>
             <div class="card-body">
-              <h3 class="text-center">Bianchi Vista M + кавова вендінг машина</h3><br />
+              <h3 class="text-center">Bianchi Vista M + кавова вендінг машина</h3>
+              <br />
               <small>
                 <p class="lh-sm indent">
                   Можливе комбінування двох машин VISTA M з вендінг машиною для гарячих
@@ -683,7 +711,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
