--- a/src/arenda.html
+++ b/src/arenda.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content= />
-    <meta
-      name="keywords"
-      content= />
+    <meta name="description" content= /> <meta name="keywords" content= />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Оренда кавомашини Київ, Харків, Вінниця, Хмельницький, Черкаси | Bianchi Professional</title>
+    <title>
+      Оренда кавомашини Київ, Харків, Вінниця, Хмельницький, Черкаси | Bianchi
+      Professional
+    </title>
     <link rel="icon" href="./favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -301,17 +299,18 @@
       </div>
     </nav>
 
-   <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
-   <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
-    <ol class="breadcrumb mb-2">
-      <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Головна</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Оренда кавомашин</li>
-    </ol>
-  </nav>
-</nav>
-<div class="separator">
-  <h1>Оренда кавових машин</h1>
-</div>
+    <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
+    <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+      <ol class="breadcrumb mb-2">
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Головна</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Оренда кавомашин</li>
+      </ol>
+    </nav>
+    <div class="d-flex justify-content-center separator">
+      <h1>Оренда кавових машин</h1>
+    </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
       <div class="container">
@@ -379,8 +378,8 @@
                   та доставка
                 </h5>
                 <p class="card-text main-text-size">
-                  Забезпечуємо своєчасним сервісом, ремонтом та доставкою інгредієнтів. Всі продукти
-                  вищої якості виробництва Голландії.
+                  Забезпечуємо своєчасним сервісом, ремонтом та доставкою інгредієнтів.
+                  Всі продукти вищої якості виробництва Голландії.
                 </p>
               </div>
             </div>
@@ -393,7 +392,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 px-4">
-          <img src="./img/arenda/slide2.webp" class="p-3 img-fluid" alt="оренда кавомашин київ
+          <img
+            src="./img/arenda/slide2.webp"
+            class="p-3 img-fluid"
+            alt="оренда кавомашин київ
           " />
         </div>
         <div class="col-lg-6">
@@ -401,11 +403,16 @@
             Кавомашина для магазину
           </a>
           <p class="magazine indent main-text-size">
-            Випити смачну каву зараз можна не тільки в кав'ярнях, але й у магазинах, як великих, так й маленьких. 
-            Пропонуємо вам встановити кавове обладнання у вашій торговельній мережі на вигідних умовах. Тільки уявіть, 
-            як аромат свіжомеленої кави зустрічає ваших клієнтів та спонукає повертатися за стаканчиком улюбленого напою знову й знову.</p> 
-          <p>Вибір кавомашини залежить від розміру закладу та його статусності, прохідності людей. Наші менеджери підберуть 
-            найвигідніший варіант саме для Вас, враховуючи всі нюанси та побажання.
+            Випити смачну каву зараз можна не тільки в кав'ярнях, але й у магазинах, як
+            великих, так й маленьких. Пропонуємо вам встановити кавове обладнання у вашій
+            торговельній мережі на вигідних умовах. Тільки уявіть, як аромат свіжомеленої
+            кави зустрічає ваших клієнтів та спонукає повертатися за стаканчиком
+            улюбленого напою знову й знову.
+          </p>
+          <p>
+            Вибір кавомашини залежить від розміру закладу та його статусності, прохідності
+            людей. Наші менеджери підберуть найвигідніший варіант саме для Вас, враховуючи
+            всі нюанси та побажання.
           </p>
         </div>
       </div>
@@ -417,37 +424,54 @@
             Кавомашина в офіс
           </a>
           <p class="magazine indent main-text-size">
-            Кавомашина для офісу відіграє важливу роль у створенні комфортної робочої атмосфери. 
-            Вона допомагає підтримувати енергію та концентрацію співробітників, сприяючи їх продуктивності протягом дня. Крім того, кавові паузи надають 
-            можливість для короткого відпочинку та неформального спілкування з колегами, що позитивно впливає на командний дух.</p>
-          <p>Оренда кавомашини для офісу 
-            дозволяє уникнути великих початкових витрат на купівлю дорогого обладнання, включає повне обслуговування та ремонт, можливість легкої зміни обладнання, 
-            якщо з'являться нові вимоги.
+            Кавомашина для офісу відіграє важливу роль у створенні комфортної робочої
+            атмосфери. Вона допомагає підтримувати енергію та концентрацію співробітників,
+            сприяючи їх продуктивності протягом дня. Крім того, кавові паузи надають
+            можливість для короткого відпочинку та неформального спілкування з колегами,
+            що позитивно впливає на командний дух.
+          </p>
+          <p>
+            Оренда кавомашини для офісу дозволяє уникнути великих початкових витрат на
+            купівлю дорогого обладнання, включає повне обслуговування та ремонт,
+            можливість легкої зміни обладнання, якщо з'являться нові вимоги.
           </p>
         </div>
         <div class="col-lg-6">
-          <img src="./img/arenda/slide3.webp" class="p-3 img-fluid" alt="оренда кавомашини вінниця" />
-        </div> 
+          <img
+            src="./img/arenda/slide3.webp"
+            class="p-3 img-fluid"
+            alt="оренда кавомашини вінниця" />
+        </div>
       </div>
     </div>
     <div class="container">
       <div class="row mb-4">
         <div class="col-lg-6">
-          <img src="./img/arenda/slide4.webp" class="p-3 img-fluid" alt="кавомашина для бізнесу" />
+          <img
+            src="./img/arenda/slide4.webp"
+            class="p-3 img-fluid"
+            alt="кавомашина для бізнесу" />
         </div>
         <div class="col-lg-6 px-4">
-          <a class="blacklink fw-medium fs-5 lh-lg" href="./dlya_azs.html">Кавомашина для АЗС</a>
+          <a class="blacklink fw-medium fs-5 lh-lg" href="./dlya_azs.html">
+            Кавомашина для АЗС
+          </a>
           <p class="magazine indent main-text-size">
-            Кавомашина на автозаправній станції – це не просто зручність, а важлива складова сучасного сервісу. Вона дозволяє водіям
-             та пасажирам насолоджуватися якісною кавою під час короткої зупинки на заправці. Свіжозварена кава з кавомашини забезпечує 
-             енергію та підвищує настрій, роблячи кожну зупинку приємнішою.</p> 
-            <p>Наявність кавомашини на АЗС допомагає залучити більше клієнтів та 
-             створити позитивне враження про ваш сервіс, підкреслюючи вашу турботу про їхній комфорт та зручність.
+            Кавомашина на автозаправній станції – це не просто зручність, а важлива
+            складова сучасного сервісу. Вона дозволяє водіям та пасажирам насолоджуватися
+            якісною кавою під час короткої зупинки на заправці. Свіжозварена кава з
+            кавомашини забезпечує енергію та підвищує настрій, роблячи кожну зупинку
+            приємнішою.
+          </p>
+          <p>
+            Наявність кавомашини на АЗС допомагає залучити більше клієнтів та створити
+            позитивне враження про ваш сервіс, підкреслюючи вашу турботу про їхній комфорт
+            та зручність.
           </p>
         </div>
       </div>
     </div>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Що потрібно для співпраці</h3>
     </div>
     <div class="container timeline">
@@ -1572,7 +1596,9 @@
           </div>
           <div class="slider">
             <div class="slider__item">
-              <img data-lazy="./img/arenda/slider/necta_koro_prime.webp" alt="Necta Coro Prime" />
+              <img
+                data-lazy="./img/arenda/slider/necta_koro_prime.webp"
+                alt="Necta Coro Prime" />
             </div>
             <div class="slider__item">
               <img
@@ -1580,13 +1606,19 @@
                 alt="Кавоварка Rheavendors Minibona 2" />
             </div>
             <div class="slider__item">
-              <img data-lazy="./img/arenda/slider/bianchi_talia_touch.webp" alt="Talia Touch" />
+              <img
+                data-lazy="./img/arenda/slider/bianchi_talia_touch.webp"
+                alt="Talia Touch" />
             </div>
             <div class="slider__item">
-              <img data-lazy="./img/arenda/slider/gaia_touch.webp" alt="Кавомашина Bianchi Gaia Touch" />
+              <img
+                data-lazy="./img/arenda/slider/gaia_touch.webp"
+                alt="Кавомашина Bianchi Gaia Touch" />
             </div>
             <div class="slider__item">
-              <img data-lazy="./img/arenda/slider/necta_korinto_prime.webp" alt="Кавомашина в оренду Necta Korinto" />
+              <img
+                data-lazy="./img/arenda/slider/necta_korinto_prime.webp"
+                alt="Кавомашина в оренду Necta Korinto" />
             </div>
           </div>
         </div>
@@ -1770,7 +1802,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -1860,7 +1892,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="js/modules/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
       $(document).ready(function () {
         $(".slider").slick({
