--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -311,7 +311,7 @@
       </ol>
     </nav>
 
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Кавові апарати в оренду</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -1218,7 +1218,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
