--- a/src/chay_stakany.html
+++ b/src/chay_stakany.html
@@ -309,7 +309,7 @@
       </ol>
     </nav>
 
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Чай "Bianchi"</h1>
     </div>
     <div class="description container">
@@ -819,7 +819,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
