--- a/src/contacty.html
+++ b/src/contacty.html
@@ -317,7 +317,7 @@
     </nav>
     <div class="contacts_body">
       <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h1>Контактна інформація</h1>
       </div>
       <!-- /////////////////////////////////////////   Body    ////////////////////////////////////////     -->
@@ -595,7 +595,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
