--- a/src/dlya_azs.html
+++ b/src/dlya_azs.html
@@ -310,7 +310,7 @@
         <li class="breadcrumb-item active" aria-current="page">Для АЗС</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Кавомашина для АЗС</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -521,7 +521,7 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Carousel    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Що потрібно для співпраці</h3>
     </div>
     <div class="container timeline">
@@ -827,7 +827,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -916,7 +916,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="js/modules/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
       $(document).ready(function () {
         $(".slider").slick({
