--- a/src/legal_terms.html
+++ b/src/legal_terms.html
@@ -284,8 +284,12 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Головна</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Умови використання сайту</li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Головна</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Умови використання сайту
+        </li>
       </ol>
     </nav>
     <!-- /////////////////////////////////////////   Text    ////////////////////////////////////////     -->
@@ -650,7 +654,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
