--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -318,7 +318,7 @@
     </nav>
     <div class="contacts_body">
       <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h1>Контактная информация</h1>
       </div>
       <!-- /////////////////////////////////////////   Body    ////////////////////////////////////////     -->
@@ -599,7 +599,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
