--- a/src/ru/dlya_ofisov.html
+++ b/src/ru/dlya_ofisov.html
@@ -314,7 +314,7 @@
         <li class="breadcrumb-item active" aria-current="page">Для офисов</li>
       </ol>
     </nav>
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h1>Кофемашины для офиса</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -534,7 +534,7 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Timeline    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Что нужно для сотрудничества</h3>
     </div>
     <div class="container timeline">
@@ -596,7 +596,7 @@
       </div>
     </div>
     <!-- ////////////////////// Timeline ///////////////////////// -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Что нужно для сотрудничества</h3>
     </div>
     <div class="container timeline">
@@ -887,7 +887,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -976,7 +976,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-    <script src="../js/modules/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script>
       $(document).ready(function () {
         $(".slider").slick({
