--- a/src/ru/kofemolki.html
+++ b/src/ru/kofemolki.html
@@ -306,7 +306,7 @@
       </div>
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="separator">
+    <div class="d-flex justify-content-center separator">
       <h3>Профессиональные кофемолки</h3>
     </div>
     <div class="description container">
@@ -636,7 +636,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
