--- a/src/ru/legal_terms.html
+++ b/src/ru/legal_terms.html
@@ -286,8 +286,12 @@
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
     <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
-        <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Главная</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Правила использования сайта</li>
+        <li class="breadcrumb-item">
+          <a class="greenlink" href="./index.html">Главная</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+          Правила использования сайта
+        </li>
       </ol>
     </nav>
     <!-- /////////////////////////////////////////   Text    ////////////////////////////////////////     -->
@@ -653,7 +657,7 @@
           </div>
         </div>
       </div>
-      <div class="separator">
+      <div class="d-flex justify-content-center separator">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
